--- a/FUNSECTION_R10.ipynb
+++ b/FUNSECTION_R10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,24 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_40892/3811897209.py:13: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_47382/3811897209.py:13: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  CONTROL_R10_bayexpress_FC0[f'{i}'] = (data.BF > 1) & (abs(data.FC) > 0)\n",
-      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_40892/3811897209.py:16: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_47382/3811897209.py:16: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  CONTROL_R10_bayexpress_FC1[f'{i}'] = (data.BF > 1) & (abs(data.FC) > 1)\n",
-      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_40892/3811897209.py:19: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_47382/3811897209.py:19: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  CONTROL_R10_bayexpress_FC2[f'{i}'] = (data.BF > 1) & (abs(data.FC) > 2)\n",
-      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_40892/3811897209.py:21: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_47382/3811897209.py:21: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  CONTROL_R10_bayexpress_FC0['Ntrue'] = [(CONTROL_R10_bayexpress_FC0.iloc[i].value_counts().get(True, 0)) for i in range(len(CONTROL_R10_bayexpress_FC0))]\n",
-      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_40892/3811897209.py:23: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_47382/3811897209.py:23: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  CONTROL_R10_bayexpress_FC1['Ntrue'] = [(CONTROL_R10_bayexpress_FC1.iloc[i].value_counts().get(True, 0)) for i in range(len(CONTROL_R10_bayexpress_FC1))]\n",
-      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_40892/3811897209.py:25: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_47382/3811897209.py:25: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  CONTROL_R10_bayexpress_FC2['Ntrue'] = [(CONTROL_R10_bayexpress_FC2.iloc[i].value_counts().get(True, 0)) for i in range(len(CONTROL_R10_bayexpress_FC2))]\n"
      ]
     },
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1707,8 +1707,8 @@
        "      <th>BF</th>\n",
        "      <th>FC</th>\n",
        "      <th>nBF_WT</th>\n",
-       "      <th>nBF_Snf2</th>\n",
        "      <th>AOTP_WT</th>\n",
+       "      <th>nBF_Snf2</th>\n",
        "      <th>AOTP_Snf2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1719,8 +1719,8 @@
        "      <td>-3.710645</td>\n",
        "      <td>0.274047</td>\n",
        "      <td>-107.138056</td>\n",
-       "      <td>53.627445</td>\n",
        "      <td>False</td>\n",
+       "      <td>53.627445</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1729,8 +1729,8 @@
        "      <td>-1.302642</td>\n",
        "      <td>0.147177</td>\n",
        "      <td>362.115507</td>\n",
-       "      <td>1052.203968</td>\n",
        "      <td>True</td>\n",
+       "      <td>1052.203968</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1739,8 +1739,8 @@
        "      <td>0.451012</td>\n",
        "      <td>0.120243</td>\n",
        "      <td>251.787125</td>\n",
-       "      <td>478.066414</td>\n",
        "      <td>True</td>\n",
+       "      <td>478.066414</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1749,8 +1749,8 @@
        "      <td>-0.117540</td>\n",
        "      <td>0.325530</td>\n",
        "      <td>-194.522309</td>\n",
-       "      <td>-176.114481</td>\n",
        "      <td>False</td>\n",
+       "      <td>-176.114481</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1759,8 +1759,8 @@
        "      <td>-3.832185</td>\n",
        "      <td>0.372953</td>\n",
        "      <td>-190.887348</td>\n",
-       "      <td>-114.388704</td>\n",
        "      <td>False</td>\n",
+       "      <td>-114.388704</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1779,8 +1779,8 @@
        "      <td>-4.021802</td>\n",
        "      <td>-0.105108</td>\n",
        "      <td>-163.004723</td>\n",
-       "      <td>-158.261430</td>\n",
        "      <td>False</td>\n",
+       "      <td>-158.261430</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1789,8 +1789,8 @@
        "      <td>153.959142</td>\n",
        "      <td>0.821886</td>\n",
        "      <td>-170.445138</td>\n",
-       "      <td>-172.395022</td>\n",
        "      <td>False</td>\n",
+       "      <td>-172.395022</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1799,8 +1799,8 @@
        "      <td>-5.961317</td>\n",
        "      <td>-0.049198</td>\n",
        "      <td>-97.702962</td>\n",
-       "      <td>-164.859374</td>\n",
        "      <td>False</td>\n",
+       "      <td>-164.859374</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1809,8 +1809,8 @@
        "      <td>14.487733</td>\n",
        "      <td>0.289726</td>\n",
        "      <td>-169.091308</td>\n",
-       "      <td>-187.905653</td>\n",
        "      <td>False</td>\n",
+       "      <td>-187.905653</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1819,8 +1819,8 @@
        "      <td>272.275536</td>\n",
        "      <td>0.372995</td>\n",
        "      <td>120.984196</td>\n",
-       "      <td>160.053022</td>\n",
        "      <td>True</td>\n",
+       "      <td>160.053022</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1829,18 +1829,18 @@
        "</div>"
       ],
       "text/plain": [
-       "     locus_name          BF        FC      nBF_WT     nBF_Snf2  AOTP_WT  \\\n",
-       "0      15S_rRNA   -3.710645  0.274047 -107.138056    53.627445    False   \n",
-       "1      21S_rRNA   -1.302642  0.147177  362.115507  1052.203968     True   \n",
-       "4          LSR1    0.451012  0.120243  251.787125   478.066414     True   \n",
-       "5          NME1   -0.117540  0.325530 -194.522309  -176.114481    False   \n",
-       "11        Q0050   -3.832185  0.372953 -190.887348  -114.388704    False   \n",
-       "...         ...         ...       ...         ...          ...      ...   \n",
-       "6817       snR8   -4.021802 -0.105108 -163.004723  -158.261430    False   \n",
-       "6820      snR82  153.959142  0.821886 -170.445138  -172.395022    False   \n",
-       "6821      snR83   -5.961317 -0.049198  -97.702962  -164.859374    False   \n",
-       "6822      snR84   14.487733  0.289726 -169.091308  -187.905653    False   \n",
-       "6824      snR86  272.275536  0.372995  120.984196   160.053022     True   \n",
+       "     locus_name          BF        FC      nBF_WT  AOTP_WT     nBF_Snf2  \\\n",
+       "0      15S_rRNA   -3.710645  0.274047 -107.138056    False    53.627445   \n",
+       "1      21S_rRNA   -1.302642  0.147177  362.115507     True  1052.203968   \n",
+       "4          LSR1    0.451012  0.120243  251.787125     True   478.066414   \n",
+       "5          NME1   -0.117540  0.325530 -194.522309    False  -176.114481   \n",
+       "11        Q0050   -3.832185  0.372953 -190.887348    False  -114.388704   \n",
+       "...         ...         ...       ...         ...      ...          ...   \n",
+       "6817       snR8   -4.021802 -0.105108 -163.004723    False  -158.261430   \n",
+       "6820      snR82  153.959142  0.821886 -170.445138    False  -172.395022   \n",
+       "6821      snR83   -5.961317 -0.049198  -97.702962    False  -164.859374   \n",
+       "6822      snR84   14.487733  0.289726 -169.091308    False  -187.905653   \n",
+       "6824      snR86  272.275536  0.372995  120.984196     True   160.053022   \n",
        "\n",
        "      AOTP_Snf2  \n",
        "0          True  \n",
