--- a/FUNSECTION_R3.ipynb
+++ b/FUNSECTION_R3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,24 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_40876/1121698751.py:13: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_47532/1121698751.py:13: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  CONTROL_R3_bayexpress_FC0[f'{i}'] = (data.BF > 1) & (abs(data.FC) > 0)\n",
-      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_40876/1121698751.py:16: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_47532/1121698751.py:16: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  CONTROL_R3_bayexpress_FC1[f'{i}'] = (data.BF > 1) & (abs(data.FC) > 1)\n",
-      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_40876/1121698751.py:19: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_47532/1121698751.py:19: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  CONTROL_R3_bayexpress_FC2[f'{i}'] = (data.BF > 1) & (abs(data.FC) > 2)\n",
-      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_40876/1121698751.py:21: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_47532/1121698751.py:21: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  CONTROL_R3_bayexpress_FC0['Ntrue'] = [(CONTROL_R3_bayexpress_FC0.iloc[i].value_counts().get(True, 0)) for i in range(len(CONTROL_R3_bayexpress_FC0))]\n",
-      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_40876/1121698751.py:23: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_47532/1121698751.py:23: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  CONTROL_R3_bayexpress_FC1['Ntrue'] = [(CONTROL_R3_bayexpress_FC1.iloc[i].value_counts().get(True, 0)) for i in range(len(CONTROL_R3_bayexpress_FC1))]\n",
-      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_40876/1121698751.py:25: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/4r/_n71yczn7dbf4gx1wd510hvml1_mw7/T/ipykernel_47532/1121698751.py:25: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  CONTROL_R3_bayexpress_FC2['Ntrue'] = [(CONTROL_R3_bayexpress_FC2.iloc[i].value_counts().get(True, 0)) for i in range(len(CONTROL_R3_bayexpress_FC2))]\n"
      ]
     },
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1749,8 +1749,8 @@
        "      <th>BF</th>\n",
        "      <th>FC</th>\n",
        "      <th>nBF_WT</th>\n",
-       "      <th>nBF_Snf2</th>\n",
        "      <th>AOTP_WT</th>\n",
+       "      <th>nBF_Snf2</th>\n",
        "      <th>AOTP_Snf2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1761,8 +1761,8 @@
        "      <td>-3.710645</td>\n",
        "      <td>0.274047</td>\n",
        "      <td>-107.138056</td>\n",
-       "      <td>53.627445</td>\n",
        "      <td>False</td>\n",
+       "      <td>53.627445</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1771,8 +1771,8 @@
        "      <td>-1.302642</td>\n",
        "      <td>0.147177</td>\n",
        "      <td>362.115507</td>\n",
-       "      <td>1052.203968</td>\n",
        "      <td>True</td>\n",
+       "      <td>1052.203968</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1781,8 +1781,8 @@
        "      <td>0.451012</td>\n",
        "      <td>0.120243</td>\n",
        "      <td>251.787125</td>\n",
-       "      <td>478.066414</td>\n",
        "      <td>True</td>\n",
+       "      <td>478.066414</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1791,8 +1791,8 @@
        "      <td>-3.832185</td>\n",
        "      <td>0.372953</td>\n",
        "      <td>-190.887348</td>\n",
-       "      <td>-114.388704</td>\n",
        "      <td>False</td>\n",
+       "      <td>-114.388704</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1801,8 +1801,8 @@
        "      <td>13.774601</td>\n",
        "      <td>0.316040</td>\n",
        "      <td>246.914584</td>\n",
-       "      <td>521.186933</td>\n",
        "      <td>True</td>\n",
+       "      <td>521.186933</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1821,8 +1821,8 @@
        "      <td>-4.021802</td>\n",
        "      <td>-0.105108</td>\n",
        "      <td>-163.004723</td>\n",
-       "      <td>-158.261430</td>\n",
        "      <td>False</td>\n",
+       "      <td>-158.261430</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1831,8 +1831,8 @@
        "      <td>153.959142</td>\n",
        "      <td>0.821886</td>\n",
        "      <td>-170.445138</td>\n",
-       "      <td>-172.395022</td>\n",
        "      <td>False</td>\n",
+       "      <td>-172.395022</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1841,8 +1841,8 @@
        "      <td>-5.961317</td>\n",
        "      <td>-0.049198</td>\n",
        "      <td>-97.702962</td>\n",
-       "      <td>-164.859374</td>\n",
        "      <td>False</td>\n",
+       "      <td>-164.859374</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1851,8 +1851,8 @@
        "      <td>14.487733</td>\n",
        "      <td>0.289726</td>\n",
        "      <td>-169.091308</td>\n",
-       "      <td>-187.905653</td>\n",
        "      <td>False</td>\n",
+       "      <td>-187.905653</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1861,8 +1861,8 @@
        "      <td>272.275536</td>\n",
        "      <td>0.372995</td>\n",
        "      <td>120.984196</td>\n",
-       "      <td>160.053022</td>\n",
        "      <td>True</td>\n",
+       "      <td>160.053022</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1871,18 +1871,18 @@
        "</div>"
       ],
       "text/plain": [
-       "     locus_name          BF        FC      nBF_WT     nBF_Snf2  AOTP_WT  \\\n",
-       "0      15S_rRNA   -3.710645  0.274047 -107.138056    53.627445    False   \n",
-       "1      21S_rRNA   -1.302642  0.147177  362.115507  1052.203968     True   \n",
-       "4          LSR1    0.451012  0.120243  251.787125   478.066414     True   \n",
-       "11        Q0050   -3.832185  0.372953 -190.887348  -114.388704    False   \n",
-       "41       RDN5-1   13.774601  0.316040  246.914584   521.186933     True   \n",
-       "...         ...         ...       ...         ...          ...      ...   \n",
-       "6817       snR8   -4.021802 -0.105108 -163.004723  -158.261430    False   \n",
-       "6820      snR82  153.959142  0.821886 -170.445138  -172.395022    False   \n",
-       "6821      snR83   -5.961317 -0.049198  -97.702962  -164.859374    False   \n",
-       "6822      snR84   14.487733  0.289726 -169.091308  -187.905653    False   \n",
-       "6824      snR86  272.275536  0.372995  120.984196   160.053022     True   \n",
+       "     locus_name          BF        FC      nBF_WT  AOTP_WT     nBF_Snf2  \\\n",
+       "0      15S_rRNA   -3.710645  0.274047 -107.138056    False    53.627445   \n",
+       "1      21S_rRNA   -1.302642  0.147177  362.115507     True  1052.203968   \n",
+       "4          LSR1    0.451012  0.120243  251.787125     True   478.066414   \n",
+       "11        Q0050   -3.832185  0.372953 -190.887348    False  -114.388704   \n",
+       "41       RDN5-1   13.774601  0.316040  246.914584     True   521.186933   \n",
+       "...         ...         ...       ...         ...      ...          ...   \n",
+       "6817       snR8   -4.021802 -0.105108 -163.004723    False  -158.261430   \n",
+       "6820      snR82  153.959142  0.821886 -170.445138    False  -172.395022   \n",
+       "6821      snR83   -5.961317 -0.049198  -97.702962    False  -164.859374   \n",
+       "6822      snR84   14.487733  0.289726 -169.091308    False  -187.905653   \n",
+       "6824      snR86  272.275536  0.372995  120.984196     True   160.053022   \n",
        "\n",
        "      AOTP_Snf2  \n",
        "0          True  \n",
