--- a/do_DGE.ipynb
+++ b/do_DGE.ipynb
@@ -56765,24 +56765,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# assuming a flat prior (for now?)\n",
-    "u_1 = 1\n",
-    "u_2 = 1\n",
-    "\n",
     "# calculating Bayes factors\n",
     "def get_BF(N_1, n_1, N_2, n_2):\n",
     "\n",
     "    return (sc.betaln( u_1 + n_1, u_2 + N_1 - n_1) + sc.betaln( u_1 + n_2, u_2 + N_2 - n_2) - sc.betaln( u_1 + n_1 + n_2, u_2 + N_1 - n_1 + N_2 - n_2)) / np.log(10) \n",
     "\n",
-    "# ratio of expression \n",
-    "# probably best to make it log2 to fit with most other software\n",
     "\n",
+    "# ratio of expression \n",
+    "# calculating log fold change\n",
     "def get_FC(N_1, n_1, N_2, n_2):\n",
     "    rate_1 = (u_1 + n_1) / (u_2 + N_1 - n_1)\n",
     "    rate_2 = (u_1 + n_2) / (u_2 + N_2 - n_2)\n",
     "\n",
-    "    return np.log2(rate_2 / rate_1)"
+    "    return np.log2(rate_2 / rate_1)\n",
+    "\n",
+    "# setting the priors to flat prios\n",
+    "u_1 = 1\n",
+    "u_2 = 1"
    ]
   },
   {
@@ -57721,7 +57720,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
